--- a/Portale.csproj
+++ b/Portale.csproj
@@ -20,6 +20,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\PostUser\" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties wwwroot_4lib_4bootstrap_4dist_4js_4bootstrap_1esm_1js_1map__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
