--- a/Portale.csproj
+++ b/Portale.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\posts\" />
     <Folder Include="wwwroot\images\profiles\" />
   </ItemGroup>
 
