--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,9 @@
     "Audience": "Audience"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Portale;Trusted_Connection=True;encrypt=false;MultipleActiveResultSets=true",
+    "DefaultConnectionOld": "Server=.\\SQLEXPRESS;Database=Portale;Trusted_Connection=True;encrypt=false;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=sql_server;Database=Portale;User Id=SA;Password=A&VeryComplex123Password;encrypt=false;MultipleActiveResultSets=true",
+    "DefaultConnectionDockerOld": "Server=host.docker.internal,1433;Database=Portale;User Id=SA;Password=A&VeryComplex123Password;encrypt=false;MultipleActiveResultSets=true",
     "SomeeConnection": "workstation id=AleGest.mssql.somee.com;packet size=4096;user id=dipretoroalessio_SQLLogin_1;pwd=xg8anybg1s;data source=AleGest.mssql.somee.com;persist security info=False;initial catalog=AleGest"
   },
   "Logging": {
