--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7177;http://localhost:5279",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ConnectionStrings__DefaultConnection": "Server=.\\SQLEXPRESS;Database=Portale;Trusted_Connection=True;encrypt=false;MultipleActiveResultSets=true"
       }
     },
     "http": {
